Replace 'adding_age.qmd' with 'map_age.qmd' and update references in '_quarto.yml'

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ book:
         - "contents/stroke_mapping.qmd"
     - part: Mapping by Variable
       chapters: 
-        - "contents/adding_age.qmd"
+        - "contents/map_age.qmd"
 
 
 bibliography: references.bib
