--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ book:
     - part: Mapping by project
       chapters: 
         - "contents/stroke_mapping.qmd"
+        - "contents/map_birads_composition.qmd"
     - part: Mapping by Variable
       chapters: 
         - "contents/map_age.qmd"
