--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,9 @@ book:
     - part: Mapping by Variable
       chapters: 
         - "contents/map_age.qmd"
+    - part: Concept
+      chapters: 
+        - "contents/concept/omop_image_feature_event.qmd"
 
 
 bibliography: references.bib
