Add 'map_sex.qmd' to the project and update chapter references in '_quarto.yml'

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,7 @@ book:
     - part: Mapping by Variable
       chapters: 
         - "contents/map_age.qmd"
+        - "contents/map_sex.qmd"
     - part: Concept
       chapters: 
         - "contents/concept/omop_image_feature_event.qmd"
