--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,7 @@ book:
     - part: Map by table
       chapters: 
         - "contents/map_table/map_procedure_occ_row.qmd"
+        - "contents/map_table/map_image_feature.qmd"
     - part: Concept
       chapters: 
         - "contents/concept/omop_image_feature_event.qmd"
