Add 'omop-for-research-gemini.md' to discuss section and update chapter references in '_quarto.yml'

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,6 +29,7 @@ book:
     - part: Discuss
       chapters: 
         - "contents/discuss/omop-for-research.qmd"
+        - "contents/discuss/omop-for-research-gemini.md"
 
 
 bibliography: references.bib
