Add 'omop-for-research-claude.md' to Discuss section and update chapter references in '_quarto.yml'

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,6 +30,7 @@ book:
       chapters: 
         - "contents/discuss/omop-for-research.qmd"
         - "contents/discuss/omop-for-research-gemini.md"
+        - "contents/discuss/omop-for-research-claude.md"
 
 
 bibliography: references.bib
